--- a/resume2.css
+++ b/resume2.css
@@ -1,7 +1,7 @@
 .container{
     margin: auto;
     display: flex;
-    /* width: 50%; */
+    width: 60%;
 
 }
 .left{
@@ -58,7 +58,7 @@
 
 .Progress{
     background-color: #f5f5f5;
-    width: 70%;
+    width: 50%;
     height: 5px;
     border: solid 1px #fff1ac;
     border-radius: 50px; 
@@ -76,7 +76,7 @@
 }
 .Progress-70{
     background-color: #f5f5f5;
-    width: 70%;
+    width: 50%;
     height: 5px;
     border: solid 1px #fff1ac;
     border-radius: 50px; 
@@ -172,3 +172,34 @@ h4{
 .right-details{
     margin: 10px 0 10px 0;
 }
+@media screen and (max-width:1300px) { 
+    .container{
+        width: 90%;
+    
+    }
+  }
+  @media screen and (max-width:1085px) { 
+    .container{
+        width: 100%;
+    
+    }
+  }
+  @media screen and (max-width:768px) { 
+    .container{
+        width: 100%;
+        flex-direction: column;
+    }
+    .left{
+        width: 100%;
+        margin: auto;
+    }
+    .right{
+        width: 100%;
+        margin: auto;
+    }
+  }
+  @media screen and (max-width:576px) { 
+    .right{
+        width: 100%;
+    }
+  }
